Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.11.8
-
Linux, n.a.
-
Unexpected results
Description
Upgrading from 10.11.7 to 10.11.8 shows a new, never seen before, phenomena (note):
$ mariadb-upgrade --user=root --force
|
...
|
download.distribution_versions
|
note : Auto_increment will be checked on each open until CHECK TABLE FOR UPGRADE is executed
|
status : OK
|
download.distributions
|
note : Auto_increment will be checked on each open until CHECK TABLE FOR UPGRADE is executed
|
status : OK
|
download.files OK
|
download.operating_systems
|
note : Auto_increment will be checked on each open until CHECK TABLE FOR UPGRADE is executed
|
status : OK
|
...
|
This happens not on all tables but on some. This is reproducible and message does not go away after executing mariadb-upgrade again.
It can be reproduced with CHECK TABLE ... FOR UPGRADE:
mariadb> check table distribution_versions for upgrade;
|
+--------------------------------+-------+----------+---------------------------------------------------------------------------------------+
|
| Table | Op | Msg_type | Msg_text |
|
+--------------------------------+-------+----------+---------------------------------------------------------------------------------------+
|
| download.distribution_versions | check | note | Auto_increment will be checked on each open until CHECK TABLE FOR UPGRADE is executed |
|
| download.distribution_versions | check | status | OK |
|
+--------------------------------+-------+----------+---------------------------------------------------------------------------------------+
|
2 rows in set (0.001 sec)
|
 |
mariadb> check table distribution_versions for upgrade;
|
+--------------------------------+-------+----------+---------------------------------------------------------------------------------------+
|
| Table | Op | Msg_type | Msg_text |
|
+--------------------------------+-------+----------+---------------------------------------------------------------------------------------+
|
| download.distribution_versions | check | note | Auto_increment will be checked on each open until CHECK TABLE FOR UPGRADE is executed |
|
| download.distribution_versions | check | status | OK |
|
+--------------------------------+-------+----------+---------------------------------------------------------------------------------------+
|
2 rows in set (0.001 sec)
|
So IMHO this message is nonsense and should go away at least after the 2nd CHECK TABLE FOR UPGRADE.
This phenomena can be reproduced at will. If you need some more information (like SHOW CREATE TABLE, .frm file, etc.) please let me know.
Attachments
Issue Links
- relates to
-
MDEV-33277 In-place migration from MySQL 5.7 causes invalid AUTO_INCREMENT values
-
- Closed
-