MDEV-34210 Improve auto-inc upgrade check message

In commit 0381921e, logic was added to fix bogus values of PAGE_ROOT_AUTO_INC
when upgrading from MySQL or versions of MariaDB < 10.2.10. As part of this
change, if a table's frm version was less than 10.2.10 and the server was in a
read-only state (preventing the frm version from being updated), a message was
introduced during the execution of CHECK TABLE FOR UPGRADE informing users that
the auto_increment check would be performed on each open of the table.

However, this message didn't mention the fact that the server being in a
read-only state would prevent the frm version from being updated thus causing
confusion as the message would not go away even after running CHECK TABLE FOR
UPGRADE.

The message is now improved for clarity.

All new code of the whole pull request, including one or several files
that are either new files or modified ones, are contributed under the
BSD-new license. I am contributing on behalf of my employer Amazon Web
Services, Inc.